# SpiritEngine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  configure.sh
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
src/: DefaultShader.hpp  DeferredShading.cpp  DeferredShading.hpp  Global.hpp  IDGenerator.hpp  Material.cpp  Material.hpp  MyGlWindow.cpp  MyGlWindow.hpp  PostProcessing.cpp  PostProcessing.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Singleton.hpp  Texture.cpp  Texture.hpp  Viewer.cpp  Viewer.h  utils.cpp  utils.hpp
src/FBO/: FboManager.cpp  FboManager.hpp  TextureManager.cpp  TextureManager.hpp  TextureViewerShader.hpp
src/FileLoader/: AFileLoader.hpp  MaterialsFileLoader.cpp  MaterialsFileLoader.hpp  ShadersFileLoader.cpp  ShadersFileLoader.hpp  TexturesFileLoader.cpp  TexturesFileLoader.hpp
src/Objects/: CullFace.cpp  CullFace.hpp  Drawable.cpp  Drawable.hpp  Light.cpp  Light.hpp  LineSegment.cpp  LineSegment.hpp  Mesh.cpp  Mesh.hpp  Model3D.cpp  Model3D.hpp  ModelLoader.hpp  Movable.cpp  Movable.hpp  Object.cpp  Object.hpp  ObjectTypes.hpp  TriangleObject.cpp  TriangleObject.hpp
src/Objects/Lights/: DirectionalLight.hpp  Light.cpp  Light.hpp  SpotLight.cpp  SpotLight.hpp
src/Objects/Primitives/: CheckeredFloor.cpp  CheckeredFloor.hpp  Cube.cpp  Cube.hpp  Plane.cpp  Plane.hpp  SkyBox.cpp  SkyBox.hpp  Sphere.cpp  Sphere.hpp  WireCube.cpp  WireCube.hpp
src/Shader/: AShader.cpp  AShader.hpp  DefaultShader.cpp  DefaultShader.hpp  FragmentShader.cpp  FragmentShader.hpp  ShaderLoader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  VertexShader.cpp  VertexShader.hpp
src/Shader/glsl/: GBuffer.frag  GBuffer.vert  deferred.frag  textureViewer.frag  textureViewer.vert
src/Texture/: SkyBoxTexture.cpp  SkyBoxTexture.hpp  Texture.cpp  Texture.hpp  Texture2D.cpp  Texture2D.hpp
test/: CMakeLists.txt  Crane.cpp  Crane.hpp  main.cpp
test/Materials/: BlinnPhongShading.frag  CartoonShading.frag  PhongShading.frag  materials.json  simple.frag  simple.json  simple.vert
test/Models/mountain/: mount.blend1.mtl
test/Shaders/: BlinnPhongShading.frag  cubemap.frag  cubemap.vert  normalMapping.vert  shaders.json  simple.frag  simple.vert  skybox.vert  testLighting.frag  testLighting.vert  textured.frag  textured.vert
test/Shaders/Fragments/: BlinnPhongShading.frag  CartoonShading.frag  GBuffer.frag  deferred.frag  normalMapping.frag  refract.frag  silhouette.frag  skybox.frag  textured.frag
test/Shaders/PostProcessing/: blur.frag  greyscale.frag  postProcessing.vert  sephia.frag  sharpening.frag  sobel.frag
test/Shaders/Vertexes/: GBuffer.vert  refract.vert  silhouette.vert  simple.vert  textured.vert
test/Textures/: textures.json
